--- a/gs_manager/templates/server_config/create.html
+++ b/gs_manager/templates/server_config/create.html
@@ -8,8 +8,8 @@
 <TABLE>
   <form method=post>
     <TR><TD><b>Max Players</b></TD><TD><input type=text name=max_players size=2 maxlength=2></TD></TR>
-    <TR><TD><b>Min Level</b></TD><TD><input type=text name=min_level size=2 maxlength=2></TD></TR>
-    <TR><TD><b>Max Level</b></TD><TD><input type=text name=max_level size=2 maxlength=2></TD></TR>
+    <TR><TD><b>Min Level (1)</b></TD><TD><input type=text name=min_level size=2 maxlength=2></TD></TR>
+    <TR><TD><b>Max Level (40)</b></TD><TD><input type=text name=max_level size=2 maxlength=2></TD></TR>
     <TR><TD><b>Pause And Play (0-1)</b></TD><TD><input type=text name=pause_play size=1 maxlength=1></TD></TR>
     <TD><li>0 = Game can only be paused by DM<br><li>1 = Game can be paused by players</TD>
     <TR><TD><b>PVP (0-2)</b></TD><TD><input type=text name=pvp size=1 maxlength=1</TD></TR>
@@ -39,6 +39,8 @@
     <TR><TD>Reload When Empty (0-1)</TD><TD><input type=text name=reload_when_empty size=1 maxlength=1></TD></TR>
     <TD><li>0 = Module state is persistant as long as server is running<br><li>1 = Module state is reset when the server becomes empty</TD>
     <TR><TD>Port</TD><TD><input type=text name=port size=5 maxlength=5></TD><TD>Default = 5121</TD></TR>
+    <TR><TD>nwn_volume_dir</TD><TD><input type=text name=nwn_volume_dir size=25 maxlength=255></TD><TD>Location of server vault</TD></TR>
+    <TR><TD>Server Activate?</TD><TD><input type=text name=is_active size=1 maxlength=1></TD><TD>1 for yes, 0 for no</TD></TR>
     <TR><TD><input type=submit>
   </form></TD><TD></TD></TR>
 </TABLE>
