Added initial commit of detecting/updating the pc users database

--- a/gs_manager/templates/server_config/index.html
+++ b/gs_manager/templates/server_config/index.html
@@ -17,9 +17,9 @@
         </div>
           <a class="action" href="{{ url_for('server_config.update', id=post['id']) }}">Edit</a>
         {% if server_status == "running" %}
-          <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">stop</a>
+          <a class="action" href="{{ url_for('server_config.stop', id=post['id']) }}">stop</a>
         {% else %}
-          <a class="action" href="{{ url_for('server_config.update', id=post['id']) }}">Start</a>
+          <a class="action" href="{{ url_for('server_config.start', id=post['id']) }}">Start</a>
         {% endif %}
       </header>
     </article>
