--- a/gs_manager/templates/server_config/update.html
+++ b/gs_manager/templates/server_config/update.html
@@ -33,13 +33,23 @@
     <TR><TD>DM Password</TD><TD><input type=password name=dm_pwd size=25 maxlength=25 value="{{ server_cfg['dm_pwd'] }}"></TD><TD>Blank to Disable</TD></TR>
     <TR><TD>Admin Password</TD><TD><input type=password name=admin_pwd size=25 maxlength=25 value="{{ server_cfg['admin_pwd'] }}"></TD><TD>Blank to Disable</TD></TR>
     <TR><TD>Server Name</TD><TD><input type=text name=server_name size=25 maxlength=255 value="{{ server_cfg['server_name'] }}"></TD></TR>
-    <TR><TD>Model Name</TD><TD><input type=text name=module_name size=25 maxlength=255 value="{{ server_cfg['module_name'] }}"></TD></TR>
+    <TR><TD><label for=”nwn_module”>Select a Module:</label> </TD><TD>
+        <select id="nwn_module">
+        {% for mod in nwn_module %}
+          <option value=”{{mod}}”>{{mod}}</option>
+        {% endfor %}
+    </TD></TR>
     <TR><TD>Public Server (0-1)</TD><TD><input type=text name=public_server size=1 maxlength=1 value="{{ server_cfg['public_server'] }}"></TD></TR>
     <TD><li>0 = Do not list server on internet<br><li>1 = List server on internet</TD>
     <TR><TD>Reload When Empty (0-1)</TD><TD><input type=text name=reload_when_empty size=1 maxlength=1 value="{{ server_cfg['reload_when_empty'] }}"></TD></TR>
     <TD><li>0 = Module state is persistant as long as server is running<br><li>1 = Module state is reset when the server becomes empty</TD>
     <TR><TD>Port</TD><TD><input type=text name=port size=5 maxlength=5 value="{{ server_cfg['port'] }}"></TD><TD>Default = 5121</TD></TR>
-    <TR><TD>nwn_volume_dir</TD><TD><input type=text name=nwn_volume_dir size=25 maxlength=255 value="{{ server_cfg['nwn_volume_dir'] }}></TD><TD>Location of server vault</TD></TR>
+    <TR><TD><label for=”nwn_volume_dir”>Select a persistent directory: </label></TD><TD>
+        <select id="nwn_volume_dir">
+        {% for dir in directories %}
+        <option value=”{{dir}}”>{{dir}}</option>
+        {% endfor %}
+    </TD></TR>
     <TR><TD>Server Activate?</TD><TD><input type=text name=is_active value="{{ server_cfg['is_active'] }}" size=1 maxlength=1></TD><TD>1 for yes, 0 for no</TD></TR>
     <TR><TD><input type=submit>
   </form></TD><TD></TD></TR>
