--- a/gs_manager/templates/base.html
+++ b/gs_manager/templates/base.html
@@ -6,6 +6,9 @@
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
+      <li><a href="{{ url_for('server_config.index') }}">Server Configurations</a>
+      <li><a href="{{ url_for('players.index') }}">Logged In Players</a>
+      <li><a href="{{ url_for('volume_manager.index') }}">Volumes Manager</a>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
