--- a/gs_manager/templates/volume_manager/create.html
+++ b/gs_manager/templates/volume_manager/create.html
@@ -1,10 +1,25 @@
+{% extends 'base.html' %}
+
+{% block header %}
+  <h1>{% block title %}Create Volume Group {% endblock %}</h1>
+{% endblock %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flask dynamic WTF forms</title>
 </head>
 <body>
-
+<form method="POST">
+    <p>{{ form.name.label }} {{ form.name }}</p>
+    <p>{{ form.description.label }} {{ form.description }}</p>
+    <input type="submit" value="Submit">
+</form>
 </body>
 </html>
+
+{% endblock %}
