Fix typos in server config code and added InputRequired validator to places it was missing

--- a/gs_manager/templates/server_config/wtf_create.html
+++ b/gs_manager/templates/server_config/wtf_create.html
@@ -18,7 +18,8 @@
 <form method="POST">
     <p>{{ form.server_name.label }} {{ form.server_name }}</p>
     <p>{{ form.max_players.label }} {{ form.max_players }}</p>
-    <p>{{ form.min_level.label }} {{ form.max_level }}</p>
+    <p>{{ form.min_level.label }} {{ form.min_level }}</p>
+    <p>{{ form.max_level.label }} {{ form.max_level }}</p>
     <p>{{ form.pause_play.label }} {{ form.pause_play }}</p>
     <p>{{ form.pvp.label }} {{ form.pvp }}</p>
     <p>{{ form.server_vault.label }} {{ form.server_vault }}</p>
