Added support for uploading files

--- a/gs_manager/templates/file_manager/index.html
+++ b/gs_manager/templates/file_manager/index.html
@@ -20,7 +20,7 @@
                 <input name="folder" type="text" value="new_folder"/>
               </form>
 
-              <form action = "/success" method = "post" enctype="multipart/form-data">
+              <form action = "/file_manager/upload" method = "post" enctype="multipart/form-data">
                 <label> Upload File: </label>
                   <input type="file" name="file" />
                   <input type = "submit" value="Upload">
