--- a/gs_manager/templates/server_config/wtf_create.html
+++ b/gs_manager/templates/server_config/wtf_create.html
@@ -37,6 +37,7 @@
     <p>{{ form.public_server.label }} {{ form.public_server }}</p>
     <p>{{ form.reload_when_empty.label }} {{ form.reload_when_empty(style="list-style:none") }}</p>
     <p>{{ form.volumes.label }} {{ form.volumes }}</p>
+    <p>{{ form.database.label }} {{ form.database(style="list-style:none") }}</p>
     <p>{{ form.is_active.label }} {{ form.is_active(style="list-style:none") }}</p>
     <input type="submit" value="Submit">
 </form>
