Added 2 second refresh to players and server_config lists

--- a/gs_manager/templates/players/index.html
+++ b/gs_manager/templates/players/index.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block content %}
+  <meta http-equiv="refresh" content="2" />
   {% for post in posts %}
     <article class="post">
       <header>
