--- a/gs_manager/templates/server_config/index.html
+++ b/gs_manager/templates/server_config/index.html
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block content %}
+  <meta http-equiv="refresh" content="2" />
   {% for post in posts %}
     <article class="post">
       <header>
