--- a/gs_manager/templates/file_manager/index.html
+++ b/gs_manager/templates/file_manager/index.html
@@ -26,7 +26,7 @@
                   <input type = "submit" value="Upload">
               </form>
 
-              <li><a href="/file_manager/cd?path=..">..</a></li>
+	      <li><a href="/file_manager/cd?path={{ cwd }}&go_par=yes">..</a></li>
               {% for item in file_list %}
                 {% if '.' != item[0] %}
                   <li><strong><a href="/file_manager/cd?path={{cwd + '/' + item}}">{{item}}</a></strong><a href="/file_manager/rm?dir={{item}}"> (Delete)</a></li>
