--- a/gs_manager/templates/server_config/index.html
+++ b/gs_manager/templates/server_config/index.html
@@ -17,7 +17,9 @@
           <div class="about">Server Name {{ post['module_name'] }} on port {{ post['port'] }}</div>
         </div>
           <a class="action" href="{{ url_for('server_config.update', id=post['id']) }}">Edit</a>
-          {% if post['is_active'] == 0 %}
+          {% if server_status == "down" %}
+            <a class="status_error"> Backend Down </a>
+          {% elif post['is_active'] == 0 %}
             <a></a>
             <a class="status_not_active"> Not Active </a>
           {% elif post['status'] == "running" %}
