--- a/gs_manager/templates/file_manager/index.html
+++ b/gs_manager/templates/file_manager/index.html
@@ -6,38 +6,47 @@
 {% endblock %}
 
 {% block content %}
-        <html>
-          <head>
-            <title>File manager</title>
-          </head>
-          <body>
-            <div align="center">
-              <h1>Local file system</h1>
-            </div>
-            <ul>
-              <form action="/file_manager/md">
-                <input type="submit" value="New folder"/>
-                <input name="folder" type="text" value="new_folder"/>
-              </form>
+  <html>
+    <head>
+      <title>File manager</title>
+    </head>
+    <body>
+      <div align="center">
+        <h1>Local file system</h1>
+      </div>
+        <form action="/file_manager/md">
+          <input type="submit" value="New folder"/>
+          <input name="folder" type="text" value="new_folder"/>
+        </form>
 
-              <form action = "/file_manager/upload" method = "post" enctype="multipart/form-data">
-                <label> Upload File: </label>
-                  <input type="file" name="file" />
-                  <input type = "submit" value="Upload">
-              </form>
+        <form action = "/file_manager/upload" method = "post" enctype="multipart/form-data">
+          <label> Upload File: </label>
+            <input type="file" name="file" />
+            <input type = "submit" value="Upload">
+        </form>
 
-	      <li><a href="/file_manager/cd?path={{ cwd }}&go_par=yes">..</a></li>
-              {% for item in file_list %}
-                {% if '.' != item[0] %}
-                  <li><strong><a href="/file_manager/cd?path={{cwd + '/' + item}}">{{item}}</a></strong></li>
-                {% elif '.txt' in item or '.py' in item or '.json' in item %}
-                  <li><strong><a href="/file_manager/view?file={{cwd + '/' + item}}">{{item}}</a></strong></li>
-                {% else %}
-                  <li>{{item}}</li>
-                {% endif%}
-              {% endfor %}
-            </ul>
-          </body>
-        </html>
+      <table class="file_table">
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+        <tr>
+          <td><a href="/file_manager/cd?path={{ cwd }}&go_par=yes">..</a></td>
+          <td></td>
+        </tr>
+          {% for item in file_list %}
+            <tr>
+              {% if '.' != item[0] %}
+                <td><strong><a href="/file_manager/cd?path={{cwd + '/' + item}}">{{item}}</a></strong></td><td></td><td><a href="/file_manager/rm?dir={{item}}"> (Delete)</a></td>
+              {% elif '.txt' in item or '.py' in item or '.json' in item %}
+                <td><strong><a href="/file_manager/view?file={{cwd + '/' + item}}">{{item}}</a></strong></td><td></td><td></td>
+              {% else %}
+                <td>{{item}}</td><td></td>
+              {% endif%}
+          {% endfor %}
+      </table>
+    </body>
+  </html>
 {% endblock %}
 
