--- a/gs_manager/templates/file_manager/index.html
+++ b/gs_manager/templates/file_manager/index.html
@@ -38,9 +38,7 @@
           {% for item in file_list %}
             <tr>
               {% if '.' != item[0] %}
-                <td><strong><a href="/file_manager/cd?path={{cwd + '/' + item}}">{{item}}</a></strong></td><td></td><td><a href="/file_manager/rm?dir={{item}}"> (Delete)</a></td>
-              {% elif '.txt' in item or '.py' in item or '.json' in item %}
-                <td><strong><a href="/file_manager/view?file={{cwd + '/' + item}}">{{item}}</a></strong></td><td></td><td></td>
+                <td><strong><a href="/file_manager/cd?path={{cwd + '/' + item}}">{{item}}</a></strong></td><td></td><td><a href="/file_manager/rm?path={{cwd + '/' + item}}"> (Delete)</a></td>
               {% else %}
                 <td>{{item}}</td><td></td>
               {% endif%}
