--- a/gs_manager/templates/file_manager/index.html
+++ b/gs_manager/templates/file_manager/index.html
@@ -22,6 +22,7 @@
         <form action = "/file_manager/upload" method = "post" enctype="multipart/form-data">
           <label> Upload File: </label>
             <input type="file" name="file" />
+            <input type="hidden" id="cur_dir", name="dur_dir", value="{{ cwd }}">
             <input type = "submit" value="Upload">
         </form>
 
