--- a/gs_manager/templates/file_manager/index.html
+++ b/gs_manager/templates/file_manager/index.html
@@ -22,7 +22,7 @@
         <form action = "/file_manager/upload" method = "post" enctype="multipart/form-data">
           <label> Upload File: </label>
             <input type="file" name="file" />
-            <input type="hidden" id="cur_dir", name="dur_dir", value="{{ cwd }}">
+            <input type="hidden" id="cwd", name="cwd", value="{{ cwd }}">
             <input type = "submit" value="Upload">
         </form>
 
@@ -39,16 +39,43 @@
           {% for file in file_info %}
             <tr>
               {% if '.' != file[0][0] %}
+                <div filename={{file[0]}}>
                 {% if file[1] == "file" %}
-                  <td><strong><a href="/file_manager/cd?path={{cwd + '/' + file[0]}}">{{file[0]}}</a></strong></td><td><a href="/file_manager/download?path={{cwd + '/' + file[0]}}"> (Download)</a></td><td><a href="/file_manager/rm?path={{cwd + '/' + file[0]}}"> (Delete)</a></td>
+                  <td><a>{{file[0]}}</a></td><td><a href="/file_manager/download?path={{cwd + '/' + file[0]}}"> (Download)</a></td><td><a href="/file_manager/rm?path={{cwd + '/' + file[0]}}" id="{{file[0]}}" onclick="return delFileCheck(this.id);"> (Delete)</a></td>
                 {% else %}
-                  <td><strong><a href="/file_manager/cd?path={{cwd + '/' + file[0]}}">{{file[0]}}</a></strong></td><td></td><td><a href="/file_manager/rm?path={{cwd + '/' + file[0]}}"> (Delete)</a></td>
+                  <td><strong><a href="/file_manager/cd?path={{cwd + '/' + file[0]}}" >{{file[0]}}</a></strong></td><td></td><td><a href="/file_manager/rm?path={{cwd + '/' + file[0]}}" id="{{file[0]}}" onclick="return delDirCheck(this.id);"> (Delete)</a></td>
                 {% endif%}
+                </div>
               {% else %}
-                <td>{{file[0]}}</td><td></td>
+                <td></td><td></td>
               {% endif%}
           {% endfor %}
       </table>
+      
+      <script>
+        function delFileCheck(id) {
+          var fname = document.getElementById(id).id;
+          var retVal = confirm("Are you sure you want to delete the file " + fname);
+          if (retVal == true) {
+              // do stuff
+              return true;
+          } else {
+              return false;
+          }
+      }
+      function delDirCheck(id) {
+        var fname = document.getElementById(id).id;
+        var retVal = confirm("WARNING!!!! Are you sure you want to delete the directory " + fname + " and all of its contents!!!!");
+        if (retVal == true) {
+            // do stuff
+            return true;
+        } else {
+            return false;
+        }
+    }
+
+      </script>
+        
     </body>
   </html>
 {% endblock %}
