Added ability to view login history of all players  * Added table listing all player login history  * Updated base.html to include dataTable, moment and jQuery js support for new table  * Cleaned up overall structure of base.html  * Added link to dataTable css file  * Added to_dict() function to PcActiveLog model for easier implementation of new table  * Added several custom styles to style.css to better format the table

--- a/gs_manager/static/style.css
+++ b/gs_manager/static/style.css
@@ -165,3 +165,12 @@ input[type=submit] {
 .file_table td{
   min-width: 20px;
 }
+
+.player_hist {
+  font-size: x-small;
+  margin-bottom: 0;
+}
+.data {
+  font-size: x-small;
+  margin-bottom: 0;
+}
