--- a/gs_manager/templates/base.html
+++ b/gs_manager/templates/base.html
@@ -1,29 +1,38 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Game Server Manager</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1>Game Server Manager</h1>
-  <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('file_manager.index') }}">File Manager</a>
-      <li><a href="{{ url_for('server_config.index') }}">Server Configs</a>
-      <li><a href="{{ url_for('players.index') }}">Active Players</a>
-      <li><a href="{{ url_for('volume_manager.index') }}">Volumes</a>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-      <li><a href="{{ url_for('auth.register') }}">Reg</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
-</nav>
-<section class="content">
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
-</section>
+<html>
+  
+  <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://nightly.datatables.net/css/dataTables.dataTables.css" rel="stylesheet" type="text/css" />  
+  </head>
+  <nav>
+      <h4>{% block title %}{% endblock %}</h4>
+    <ul>
+      {% if g.user %}
+        <li><span>{{ g.user['username'] }}</span></li>
+        <li><a href="{{ url_for('file_manager.index') }}">File Manager</a></li>
+        <li><a href="{{ url_for('server_config.index') }}">Server Configs</a></li>
+        <li><a href="{{ url_for('players.index') }}">Active Players</a></li>
+          <li><a href="{{ url_for('player_history.index') }}">Player History</a></li>
+        <li><a href="{{ url_for('volume_manager.index') }}">Volumes</a></li>
+        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+        <li><a href="{{ url_for('auth.register') }}">Reg</a></li>
+      {% else %}
+        <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+      {% endif %}
+    </ul>
+  </nav>
+  
+  <body>
+    <div class="content">
+      <h1>{{ title }}</h1>
+      {% block content %}{% endblock %}
+    </div>
+    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
+    {% block scripts %}{% endblock %}
+  </body>
+</html>
+
 
