Added in missing field in html file for player history

--- a/gs_manager/templates/player_history/index.html
+++ b/gs_manager/templates/player_history/index.html
@@ -28,6 +28,7 @@
     <tbody>
       <a class="player_hist"> 
         <tr>
+          <th>Player Name</th>
           <td>character_name</td>
           <td>server_name</td>
           <td>logon_time</td>
