--- a/gs_manager/templates/player_history/index.html
+++ b/gs_manager/templates/player_history/index.html
@@ -90,13 +90,13 @@
                 initCollapsed: true,   
                 show: true,
             },
-            targets: [0]
+            targets: [0, 2]
         },
         {
             searchPanes:{
                 show: false,
             },
-            targets: [1,2,3,4]
+            targets: [1,3,4]
         },
   
       ],
