--- a/gs_manager/templates/base.html
+++ b/gs_manager/templates/base.html
@@ -2,12 +2,15 @@
 <html>
   
   <head>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://nightly.datatables.net/css/dataTables.dataTables.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.datatables.net/datetime/1.5.5/css/dataTables.dateTime.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
   </head>
   <nav>
-      <h4>{% block title %}{% endblock %}</h4>
+    <h3>GS Manager</h3>
     <ul>
       {% if g.user %}
         <li><span>{{ g.user['username'] }}</span></li>
@@ -25,6 +28,7 @@
   </nav>
   
   <body>
+    <h1><center>{% block title %}{% endblock %}</center></h1>
     <div class="content">
       <h1>{{ title }}</h1>
       {% block content %}{% endblock %}
