--- a/gs_manager/templates/base.html
+++ b/gs_manager/templates/base.html
@@ -4,7 +4,9 @@
   <head>
     <link href="https://nightly.datatables.net/css/dataTables.dataTables.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.datatables.net/datetime/1.5.5/css/dataTables.dateTime.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/lib/datatables/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
+    <link href="https://cdn.datatables.net/plug-ins/preview/searchPane/dataTables.searchPane.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.datatables.net/searchpanes/2.3.3/css/searchPanes.dataTables.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.datatables.net/select/3.0.0/css/select.dataTables.css" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 
@@ -36,7 +38,10 @@
     <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/2.2.2/js/dataTables.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.2/moment.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/datetime/1.5.5/js/dataTables.dateTime.min.js"></script>    
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/datetime/1.5.5/js/dataTables.dateTime.min.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/searchpanes/2.3.3/js/dataTables.searchPanes.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/select/3.0.0/js/dataTables.select.js"></script>
+  
     {% block scripts %}{% endblock %}
   </body>
 </html>
