Fixed wrong block name in auth causing it not to display login windows

--- a/gs_manager/templates/auth/login.html
+++ b/gs_manager/templates/auth/login.html
@@ -4,7 +4,7 @@
   <h1>{% block title %}Log In{% endblock %}</h1>
 {% endblock %}
 
-{% block nologin %}
+{% block insecure %}
   <form method="post">
     <label for="username">Username</label>
     <input name="username" id="username" required>
