--- a/gs_manager/static/style.css
+++ b/gs_manager/static/style.css
@@ -12,7 +12,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
-  color: #377ba8;
+  color: hsl(221, 73%, 25%);
   margin: 1rem 0;
 }
 
@@ -25,31 +25,8 @@ hr {
   border-top: 1px solid lightgray;
 }
 
-nav {
-  background: lightgray;
-  display: flex;
-  align-items: center;
-  padding: 0 0.5rem;
-}
 
-nav h1 {
-  flex: auto;
-  margin: 0;
-}
-
-nav h1 a {
-  text-decoration: none;
-  padding: 0.25rem 0.5rem;
-}
-
-nav ul  {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li a, nav ul li span, header .action {
+ul li a, ul li span, header .action {
   display: block;
   padding: 0.5rem;
 }
@@ -173,4 +150,39 @@ input[type=submit] {
 .data {
   font-size: x-small;
   margin-bottom: 0;
+}
+
+.navbar ul{
+  list-style-type: none;
+  background-color: hsl(221, 73%, 25%);
+  padding: 0px;
+  margin: 0px;
+  overflow: hidden;
+}
+
+.navbar a{
+  color: white;
+  text-decoration: none;
+  padding: 15px;
+  display: block;
+  text-align: center;
+}
+.navbar a:hover{
+  background-color: hsl(221, 73%, 15%);
+}
+
+.navbar li{
+  float: left;
+}
+
+h1{
+  text-align: center;
+}
+.title_txt{
+  font-family: serif;
+  font-size: medium;
+  font-style: bold;
+  color: hsl(221, 73%, 25%);
+  padding: 0px;
+  margin: 0px;
 }
