--- a/gs_manager/static/style.css
+++ b/gs_manager/static/style.css
@@ -68,10 +68,7 @@ ul li a, ul li span, header .action {
   margin-bottom: 0;
 }
 
-.post .about {
-  color: slategray;
-  font-style: italic;
-}
+
 
 .post .body {
   white-space: pre-line;
@@ -121,19 +118,19 @@ input[type=submit] {
   color: green;
 }
 
-.status_loading, .status_stopping, .status_stopped {
+.status_warn {
   display: block;
   padding: 0.5rem;
   color: orange;
 }
 
-.status_error {
+.status_fail {
   display: block;
   padding: 0.5rem;
   color: red;
 }
 
-.status_not_active {
+.status_none {
   display: block;
   padding: 0.5rem;
   color: black;
@@ -178,11 +175,42 @@ input[type=submit] {
 h1{
   text-align: center;
 }
-.title_txt{
-  font-family: serif;
-  font-size: medium;
-  font-style: bold;
-  color: hsl(221, 73%, 25%);
-  padding: 0px;
-  margin: 0px;
+
+.navbar-brand {
+  font-family: 'Merriweather';
+  font-size: 30px;
+  }
+  .inner {
+  text-align: center;
+  margin: auto;
+  margin-top: 10px;
+  padding: 10px;
+  border-style: solid;
+  width: 50%;
+  color: black;
+  }
+
+  .about {
+    color: slategray;
+    font-style: italic;
+  }
+
+  .title_txt{
+    font-family: serif;
+    font-size: medium;
+    font-style: bold;
+    color: hsl(221, 73%, 25%);
+    padding: 0px;
+    margin: 0px;
+  }
+.cfg_table
+{
+  border-collapse: collapse;
 }
+
+.cfg_table td
+{
+  border-bottom: solid 1px lightgray;
+}
+
+
