--- a/gs_manager/templates/base.html
+++ b/gs_manager/templates/base.html
@@ -43,6 +43,8 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/datetime/1.5.5/js/dataTables.dateTime.min.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/searchpanes/2.3.3/js/dataTables.searchPanes.js"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/select/3.0.0/js/dataTables.select.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+
   
     {% block scripts %}{% endblock %}
     {% endif %}
